small updates and corrected expand/collapse

--- a/styles/index.css
+++ b/styles/index.css
@@ -75,7 +75,7 @@
      header {
       display: flex;
       flex-direction: row;
-      justify-content: space-evenly;
+      justify-content: space-around;
       align-items: center;
      }
 
